--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;700&display=swap');
 
+
 * {
     margin: 0;
     padding: 0;
@@ -7,11 +8,17 @@
     font-family: 'Rubik', sans-serif;
 }
 
+html {
+    font-size: 80%;
+}
+
 div.nav-bar {
     display: flex;
     justify-content: space-between;
+    padding: 1rem 1.5rem;
+    border-bottom: 1px solid #bcc3c7;
     padding: 1rem 6rem;
-    width: 100vw;
+    align-items: center;
     background: #304353;
 }
 
@@ -22,29 +29,43 @@ div.logo {
 
 ul.nav-links {
     display: flex;
+    justify-content: space-between;
+    align-content: center;
     margin: 0;
     padding: 0;
-}
+} 
 
 ul li {
-    margin: 0 2vw;
+    margin-left: 5rem;
     list-style: none;
-    font-size: 1.1rem;
 }
 
 ul li a {
+    font-size: 1.6rem;
+    font-weight: 400;
     text-decoration: none;
     color: #88949B;
-    padding: 0.5vw;
 }
 
 ul li a:hover {
-    color: #304353;
-    background: #fff;
-    padding: 0.5rem;
+    color: #fff;
 }
 
-div.hero-section {
+.hamburger {
+    display: none;
+} 
+
+.bar {
+    display: block;
+    width: 25px;
+    height: 3px;
+    margin: 5px auto;
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+    background-color: #555657;
+}
+
+.hero-section {
     background: #304353;
     padding: 10rem;
 }
@@ -54,10 +75,10 @@ div.hero-content-heading {
 }
 
 div.hero-content-heading h3 {
-    font-size: 2rem;
+    font-size: 3rem;
     text-transform: uppercase;
     letter-spacing: 2px;
-    font-weight: 300;
+    font-weight: normal;
     color: #bcc3c7;
 }
 
@@ -65,7 +86,7 @@ div.hero-content-heading p {
     text-align: center;
     padding-top: 0.7rem;
     color: #88949B;
-    font-size: 1rem;
+    font-size: 2rem;
     letter-spacing: 2px;
     font-weight: 300;
 }
@@ -74,7 +95,7 @@ div.hero-content-btn {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-top: 2rem;
+    padding: 5rem 2rem;
 }
 
 div.hero-content-btn a {
@@ -344,4 +365,100 @@ div.footer h6 {
     color: #88949B;
     font-size: 1rem;
     padding-top: 6rem;
+}
+
+
+@media only screen and (max-width: 768px) {
+    html {
+        font-size: 60%;
+    }
+
+    div .nav-bar {
+        padding: 0rem;
+    }
+    .nav-links {
+        position: fixed;
+        left: -100%;
+        top: 5rem;
+        flex-direction: column;
+        background-color: rgba(226, 226, 226, 0.938);
+        width: 100%;
+        border-radius: 10px;
+        text-align: center;
+        transition: 0.3s;
+        box-shadow: 0 10px 27px rgb(100, 37, 37) ;
+    }
+
+    .nav-links.active {
+        left: 0;
+    }
+
+    ul li.active a:hover {
+        color: #fff;
+        background: #fff;
+        padding: 0.5rem; 
+    }
+
+    ul li {
+        margin: 2rem 1rem;
+    
+    }
+
+    .hamburger {
+        display: block;
+        cursor: pointer;
+    }
+
+    .hamburger.active .bar:nth-child(2) {
+        opacity: 0;
+    }
+
+    .hamburger.active .bar:nth-child(1) {
+        transform: translateY(8px) rotate(45deg);
+    }
+
+    .hamburger.active .bar:nth-child(3) {
+        transform: translateY(-8px) rotate(-45deg);
+    }
+
+    div.hero-section {
+      padding: 5rem 5rem 3rem 5rem;
+    }
+
+    div.hero-content-heading p {
+        padding-top: 1rem;
+        font-size: 2rem;
+    }
+
+    div.hero-content-btn {
+        padding: 3rem 1rem;
+    }
+    
+
+    div.background {
+        padding: 20px;
+    }
+
+    div.hero-background {
+        padding: 20px;
+    }
+
+    div.hero-background-pos {
+        position: absolute;
+        left: auto;
+        right: auto;
+        background: #fff;
+        width: 70px;
+        height: 70px;
+        margin-top: 140px;
+        border-radius: 50%;
+        box-shadow: 2px 2px 15px 0 rgb(135 135 135 / 40%);
+    }
+
+    div.snapshot-box-content {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        padding: 10px;
+    }
 }
